// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-panel Should render with args {
  identifier: 'identifier',
  panelTitle: 'panel title',
  titleEditable: true
}: 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
          <mg-button is-icon="">
            <!---->
            <button aria-disabled="false" aria-label="Edit section title." class="mg-button mg-button--flat mg-button--icon" id="identifier-edit-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--pen mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M1.67,11.69v2.64h2.64l7.78-7.78-2.64-2.64L1.67,11.69ZM14.13,4.51c.27-.28,.27-.72,0-1h0l-1.65-1.64c-.28-.27-.72-.27-1,0h0l-1.28,1.29,2.64,2.64,1.29-1.29Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args {
  identifier: 'identifier',
  panelTitle: 'panel title',
  titleEditable: true,
  lang: 'fr'
}: 1`] = `
<mg-panel lang="fr">
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
          <mg-button is-icon="">
            <!---->
            <button aria-disabled="false" aria-label="Modifier le titre de la section." class="mg-button mg-button--flat mg-button--icon" id="identifier-edit-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--pen mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M1.67,11.69v2.64h2.64l7.78-7.78-2.64-2.64L1.67,11.69ZM14.13,4.51c.27-.28,.27-.72,0-1h0l-1.65-1.64c-.28-.27-.72-.27-1,0h0l-1.28,1.29,2.64,2.64,1.29-1.29Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args {
  identifier: 'identifier',
  panelTitle: 'panel title',
  titleEditable: true,
  lang: 'xx'
}: 1`] = `
<mg-panel lang="xx">
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
          <mg-button is-icon="">
            <!---->
            <button aria-disabled="false" aria-label="Edit section title." class="mg-button mg-button--flat mg-button--icon" id="identifier-edit-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--pen mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M1.67,11.69v2.64h2.64l7.78-7.78-2.64-2.64L1.67,11.69ZM14.13,4.51c.27-.28,.27-.72,0-1h0l-1.65-1.64c-.28-.27-.72-.27-1,0h0l-1.28,1.29,2.64,2.64,1.29-1.29Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args {
  identifier: 'identifier',
  panelTitle: 'panel title',
  titleEditable: true,
  titlePattern: /joker/,
  titlePatternErrorMessage: "You can't enter a bad guy !"
}: 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
          <mg-button is-icon="">
            <!---->
            <button aria-disabled="false" aria-label="Edit section title." class="mg-button mg-button--flat mg-button--icon" id="identifier-edit-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--pen mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M1.67,11.69v2.64h2.64l7.78-7.78-2.64-2.64L1.67,11.69ZM14.13,4.51c.27-.28,.27-.72,0-1h0l-1.65-1.64c-.28-.27-.72-.27-1,0h0l-1.28,1.29,2.64,2.64,1.29-1.29Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args { identifier: 'identifier', panelTitle: 'panel title' }: 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel Should render with args { identifier: 'identifier', panelTitle: 'panel title', expanded: true }: 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" aria-expanded="" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-up mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M8.57,3.79l6.53,6.52a.81.81,0,0,1,0,1.14h0l-.76.77a.81.81,0,0,1-1.14,0L8,7,2.8,12.22a.81.81,0,0,1-1.14,0L.9,11.45a.8.8,0,0,1,0-1.13h0L7.43,3.79a.79.79,0,0,1,1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT collapse panel, case expandToggleDisabled = true 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="true" aria-expanded="" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-up mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M8.57,3.79l6.53,6.52a.81.81,0,0,1,0,1.14h0l-.76.77a.81.81,0,0,1-1.14,0L8,7,2.8,12.22a.81.81,0,0,1-1.14,0L.9,11.45a.8.8,0,0,1,0-1.13h0L7.43,3.79a.79.79,0,0,1,1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT collapse panel, case expandToggleDisabled = true 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="true" aria-expanded="" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-up mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M8.57,3.79l6.53,6.52a.81.81,0,0,1,0,1.14h0l-.76.77a.81.81,0,0,1-1.14,0L8,7,2.8,12.22a.81.81,0,0,1-1.14,0L.9,11.45a.8.8,0,0,1,0-1.13h0L7.43,3.79a.79.79,0,0,1,1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT collapse panel, case expandToggleDisabled = true 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="true" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT collapse panel, case expandToggleDisabled = true 4`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="true" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT update panel title, case input new value does NOT match pattern 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
          <mg-button is-icon="">
            <!---->
            <button aria-disabled="false" aria-label="Edit section title." class="mg-button mg-button--flat mg-button--icon" id="identifier-edit-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--pen mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M1.67,11.69v2.64h2.64l7.78-7.78-2.64-2.64L1.67,11.69ZM14.13,4.51c.27-.28,.27-.72,0-1h0l-1.65-1.64c-.28-.27-.72-.27-1,0h0l-1.28,1.29,2.64,2.64,1.29-1.29Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT update panel title, case input new value does NOT match pattern 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left mg-panel__header-left--full">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
          <mg-input-text label-hide="" pattern-error-message="You can't enter a bad guy !" value="panel title">
            <mock:shadow-root>
              <div class="mg-input mg-input--has-buttons-group-append mg-input--is-input-group-append mg-input--text mg-input--width-full">
                <mg-input-title class="sr-only" identifier="identifier-edition-input">
                  Edit section title.
                </mg-input-title>
                <div class="mg-input__input-container">
                  <div class="mg-input__input">
                    <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 0;">
                      <input aria-describedby="identifier-edition-input-character-left" class="mg-input__box" id="identifier-edition-input" maxlength="400" name="identifier-edition-input" pattern="^(?!(joker)$)[a-z A-Z0-9s]+$" type="text" value="panel title">
                    </div>
                    <slot name="append-input"></slot>
                  </div>
                </div>
              </div>
            </mock:shadow-root>
            <mg-button is-icon="" slot="append-input">
              <!---->
              <button aria-disabled="false" aria-label="Cancel" class="mg-button mg-button--icon mg-button--secondary" id="identifier-edition-button-cancel">
                <div class="mg-button__content">
                  <mg-icon>
                    <mock:shadow-root>
                      <svg aria-hidden="true" class="mg-icon mg-icon--cross mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                        <path d="M14.26 12.74 9.52 8l4.7-4.7a.29.29 0 0 0 0-.41l-1.1-1.1a.29.29 0 0 0-.41 0L8 6.48 3.26 1.74a.24.24 0 0 0-.34 0L1.74 2.91a.24.24 0 0 0 0 .34L6.48 8l-4.7 4.7a.29.29 0 0 0 0 .41l1.1 1.1a.29.29 0 0 0 .41 0L8 9.52l4.74 4.74a.24.24 0 0 0 .34 0l1.17-1.17a.24.24 0 0 0 0-.34Z" fill="currentColor"></path>
                      </svg>
                    </mock:shadow-root>
                  </mg-icon>
                </div>
              </button>
            </mg-button>
            <mg-button is-icon="" slot="append-input">
              <!---->
              <button aria-disabled="false" aria-label="Confirm" class="mg-button mg-button--icon mg-button--secondary" id="identifier-edition-button-validate">
                <div class="mg-button__content">
                  <mg-icon>
                    <mock:shadow-root>
                      <svg aria-hidden="true" class="mg-icon mg-icon--check mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                        <path d="m15.27 4.23-1.11-1.18c-.11-.1-.27-.1-.38 0L6 10.36l-3.76-4a.187.187 0 0 0-.26 0L.71 7.6c-.07.07-.07.19 0 .26l5.12 5.41c.07.07.18.07.25 0l1.3-1.23 7.87-7.45c.1-.1.11-.26.01-.37h.01Z" fill="currentColor"></path>
                      </svg>
                    </mock:shadow-root>
                  </mg-icon>
                </div>
              </button>
            </mg-button>
          </mg-input-text>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT update panel title, case input new value does NOT match pattern 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left mg-panel__header-left--full">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
          <mg-input-text label-hide="" pattern-error-message="You can't enter a bad guy !" value="joker">
            <mock:shadow-root>
              <div class="mg-input mg-input--has-buttons-group-append mg-input--is-input-group-append mg-input--text mg-input--width-full">
                <mg-input-title class="sr-only" identifier="identifier-edition-input">
                  Edit section title.
                </mg-input-title>
                <div class="mg-input__input-container">
                  <div class="mg-input__input">
                    <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 0;">
                      <input aria-describedby="identifier-edition-input-character-left" class="mg-input__box" id="identifier-edition-input" maxlength="400" name="identifier-edition-input" pattern="^(?!(joker)$)[a-z A-Z0-9s]+$" type="text" value="joker">
                    </div>
                    <slot name="append-input"></slot>
                  </div>
                </div>
              </div>
            </mock:shadow-root>
            <mg-button is-icon="" slot="append-input">
              <!---->
              <button aria-disabled="false" aria-label="Cancel" class="mg-button mg-button--icon mg-button--secondary" id="identifier-edition-button-cancel">
                <div class="mg-button__content">
                  <mg-icon>
                    <mock:shadow-root>
                      <svg aria-hidden="true" class="mg-icon mg-icon--cross mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                        <path d="M14.26 12.74 9.52 8l4.7-4.7a.29.29 0 0 0 0-.41l-1.1-1.1a.29.29 0 0 0-.41 0L8 6.48 3.26 1.74a.24.24 0 0 0-.34 0L1.74 2.91a.24.24 0 0 0 0 .34L6.48 8l-4.7 4.7a.29.29 0 0 0 0 .41l1.1 1.1a.29.29 0 0 0 .41 0L8 9.52l4.74 4.74a.24.24 0 0 0 .34 0l1.17-1.17a.24.24 0 0 0 0-.34Z" fill="currentColor"></path>
                      </svg>
                    </mock:shadow-root>
                  </mg-icon>
                </div>
              </button>
            </mg-button>
            <mg-button is-icon="" slot="append-input">
              <!---->
              <button aria-disabled="false" aria-label="Confirm" class="mg-button mg-button--icon mg-button--secondary" id="identifier-edition-button-validate">
                <div class="mg-button__content">
                  <mg-icon>
                    <mock:shadow-root>
                      <svg aria-hidden="true" class="mg-icon mg-icon--check mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                        <path d="m15.27 4.23-1.11-1.18c-.11-.1-.27-.1-.38 0L6 10.36l-3.76-4a.187.187 0 0 0-.26 0L.71 7.6c-.07.07-.07.19 0 .26l5.12 5.41c.07.07.18.07.25 0l1.3-1.23 7.87-7.45c.1-.1.11-.26.01-.37h.01Z" fill="currentColor"></path>
                      </svg>
                    </mock:shadow-root>
                  </mg-icon>
                </div>
              </button>
            </mg-button>
          </mg-input-text>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should NOT update panel title, case input new value does NOT match pattern 4`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
          <mg-button is-icon="">
            <!---->
            <button aria-disabled="false" aria-label="Edit section title." class="mg-button mg-button--flat mg-button--icon" id="identifier-edit-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--pen mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M1.67,11.69v2.64h2.64l7.78-7.78-2.64-2.64L1.67,11.69ZM14.13,4.51c.27-.28,.27-.72,0-1h0l-1.65-1.64c-.28-.27-.72-.27-1,0h0l-1.28,1.29,2.64,2.64,1.29-1.29Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle collapse panel, expanded false 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle collapse panel, expanded false 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" aria-expanded="" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-up mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M8.57,3.79l6.53,6.52a.81.81,0,0,1,0,1.14h0l-.76.77a.81.81,0,0,1-1.14,0L8,7,2.8,12.22a.81.81,0,0,1-1.14,0L.9,11.45a.8.8,0,0,1,0-1.13h0L7.43,3.79a.79.79,0,0,1,1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle collapse panel, expanded false 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle collapse panel, expanded true 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" aria-expanded="" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-up mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M8.57,3.79l6.53,6.52a.81.81,0,0,1,0,1.14h0l-.76.77a.81.81,0,0,1-1.14,0L8,7,2.8,12.22a.81.81,0,0,1-1.14,0L.9,11.45a.8.8,0,0,1,0-1.13h0L7.43,3.79a.79.79,0,0,1,1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle collapse panel, expanded true 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle collapse panel, expanded true 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" aria-expanded="" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-up mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M8.57,3.79l6.53,6.52a.81.81,0,0,1,0,1.14h0l-.76.77a.81.81,0,0,1-1.14,0L8,7,2.8,12.22a.81.81,0,0,1-1.14,0L.9,11.45a.8.8,0,0,1,0-1.13h0L7.43,3.79a.79.79,0,0,1,1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle edit panel title 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
          <mg-button is-icon="">
            <!---->
            <button aria-disabled="false" aria-label="Edit section title." class="mg-button mg-button--flat mg-button--icon" id="identifier-edit-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--pen mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M1.67,11.69v2.64h2.64l7.78-7.78-2.64-2.64L1.67,11.69ZM14.13,4.51c.27-.28,.27-.72,0-1h0l-1.65-1.64c-.28-.27-.72-.27-1,0h0l-1.28,1.29,2.64,2.64,1.29-1.29Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle edit panel title 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left mg-panel__header-left--full">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
          <mg-input-text label-hide="" value="panel title">
            <mock:shadow-root>
              <div class="mg-input mg-input--has-buttons-group-append mg-input--is-input-group-append mg-input--text mg-input--width-full">
                <mg-input-title class="sr-only" identifier="identifier-edition-input">
                  Edit section title.
                </mg-input-title>
                <div class="mg-input__input-container">
                  <div class="mg-input__input">
                    <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 0;">
                      <input aria-describedby="identifier-edition-input-character-left" class="mg-input__box" id="identifier-edition-input" maxlength="400" name="identifier-edition-input" type="text" value="panel title">
                    </div>
                    <slot name="append-input"></slot>
                  </div>
                </div>
              </div>
            </mock:shadow-root>
            <mg-button is-icon="" slot="append-input">
              <!---->
              <button aria-disabled="false" aria-label="Cancel" class="mg-button mg-button--icon mg-button--secondary" id="identifier-edition-button-cancel">
                <div class="mg-button__content">
                  <mg-icon>
                    <mock:shadow-root>
                      <svg aria-hidden="true" class="mg-icon mg-icon--cross mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                        <path d="M14.26 12.74 9.52 8l4.7-4.7a.29.29 0 0 0 0-.41l-1.1-1.1a.29.29 0 0 0-.41 0L8 6.48 3.26 1.74a.24.24 0 0 0-.34 0L1.74 2.91a.24.24 0 0 0 0 .34L6.48 8l-4.7 4.7a.29.29 0 0 0 0 .41l1.1 1.1a.29.29 0 0 0 .41 0L8 9.52l4.74 4.74a.24.24 0 0 0 .34 0l1.17-1.17a.24.24 0 0 0 0-.34Z" fill="currentColor"></path>
                      </svg>
                    </mock:shadow-root>
                  </mg-icon>
                </div>
              </button>
            </mg-button>
            <mg-button is-icon="" slot="append-input">
              <!---->
              <button aria-disabled="false" aria-label="Confirm" class="mg-button mg-button--icon mg-button--secondary" id="identifier-edition-button-validate">
                <div class="mg-button__content">
                  <mg-icon>
                    <mock:shadow-root>
                      <svg aria-hidden="true" class="mg-icon mg-icon--check mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                        <path d="m15.27 4.23-1.11-1.18c-.11-.1-.27-.1-.38 0L6 10.36l-3.76-4a.187.187 0 0 0-.26 0L.71 7.6c-.07.07-.07.19 0 .26l5.12 5.41c.07.07.18.07.25 0l1.3-1.23 7.87-7.45c.1-.1.11-.26.01-.37h.01Z" fill="currentColor"></path>
                      </svg>
                    </mock:shadow-root>
                  </mg-icon>
                </div>
              </button>
            </mg-button>
          </mg-input-text>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle edit panel title 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
          <mg-button is-icon="">
            <!---->
            <button aria-disabled="false" aria-label="Edit section title." class="mg-button mg-button--flat mg-button--icon" id="identifier-edit-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--pen mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M1.67,11.69v2.64h2.64l7.78-7.78-2.64-2.64L1.67,11.69ZM14.13,4.51c.27-.28,.27-.72,0-1h0l-1.65-1.64c-.28-.27-.72-.27-1,0h0l-1.28,1.29,2.64,2.64,1.29-1.29Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation Should toggle edit panel title 4`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should NOT update panel title, case no enter in input 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
          <mg-button is-icon="">
            <!---->
            <button aria-disabled="false" aria-label="Edit section title." class="mg-button mg-button--flat mg-button--icon" id="identifier-edit-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--pen mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M1.67,11.69v2.64h2.64l7.78-7.78-2.64-2.64L1.67,11.69ZM14.13,4.51c.27-.28,.27-.72,0-1h0l-1.65-1.64c-.28-.27-.72-.27-1,0h0l-1.28,1.29,2.64,2.64,1.29-1.29Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should NOT update panel title, case no enter in input 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left mg-panel__header-left--full">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
          <mg-input-text label-hide="" value="panel title">
            <mock:shadow-root>
              <div class="mg-input mg-input--has-buttons-group-append mg-input--is-input-group-append mg-input--text mg-input--width-full">
                <mg-input-title class="sr-only" identifier="identifier-edition-input">
                  Edit section title.
                </mg-input-title>
                <div class="mg-input__input-container">
                  <div class="mg-input__input">
                    <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 0;">
                      <input aria-describedby="identifier-edition-input-character-left" class="mg-input__box" id="identifier-edition-input" maxlength="400" name="identifier-edition-input" type="text" value="panel title">
                    </div>
                    <slot name="append-input"></slot>
                  </div>
                </div>
              </div>
            </mock:shadow-root>
            <mg-button is-icon="" slot="append-input">
              <!---->
              <button aria-disabled="false" aria-label="Cancel" class="mg-button mg-button--icon mg-button--secondary" id="identifier-edition-button-cancel">
                <div class="mg-button__content">
                  <mg-icon>
                    <mock:shadow-root>
                      <svg aria-hidden="true" class="mg-icon mg-icon--cross mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                        <path d="M14.26 12.74 9.52 8l4.7-4.7a.29.29 0 0 0 0-.41l-1.1-1.1a.29.29 0 0 0-.41 0L8 6.48 3.26 1.74a.24.24 0 0 0-.34 0L1.74 2.91a.24.24 0 0 0 0 .34L6.48 8l-4.7 4.7a.29.29 0 0 0 0 .41l1.1 1.1a.29.29 0 0 0 .41 0L8 9.52l4.74 4.74a.24.24 0 0 0 .34 0l1.17-1.17a.24.24 0 0 0 0-.34Z" fill="currentColor"></path>
                      </svg>
                    </mock:shadow-root>
                  </mg-icon>
                </div>
              </button>
            </mg-button>
            <mg-button is-icon="" slot="append-input">
              <!---->
              <button aria-disabled="false" aria-label="Confirm" class="mg-button mg-button--icon mg-button--secondary" id="identifier-edition-button-validate">
                <div class="mg-button__content">
                  <mg-icon>
                    <mock:shadow-root>
                      <svg aria-hidden="true" class="mg-icon mg-icon--check mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                        <path d="m15.27 4.23-1.11-1.18c-.11-.1-.27-.1-.38 0L6 10.36l-3.76-4a.187.187 0 0 0-.26 0L.71 7.6c-.07.07-.07.19 0 .26l5.12 5.41c.07.07.18.07.25 0l1.3-1.23 7.87-7.45c.1-.1.11-.26.01-.37h.01Z" fill="currentColor"></path>
                      </svg>
                    </mock:shadow-root>
                  </mg-icon>
                </div>
              </button>
            </mg-button>
          </mg-input-text>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should NOT update panel title, case no enter in input 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
          <mg-button is-icon="">
            <!---->
            <button aria-disabled="false" aria-label="Edit section title." class="mg-button mg-button--flat mg-button--icon" id="identifier-edit-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--pen mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M1.67,11.69v2.64h2.64l7.78-7.78-2.64-2.64L1.67,11.69ZM14.13,4.51c.27-.28,.27-.72,0-1h0l-1.65-1.64c-.28-.27-.72-.27-1,0h0l-1.28,1.29,2.64,2.64,1.29-1.29Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should update panel title, case cancel 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
          <mg-button is-icon="">
            <!---->
            <button aria-disabled="false" aria-label="Edit section title." class="mg-button mg-button--flat mg-button--icon" id="identifier-edit-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--pen mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M1.67,11.69v2.64h2.64l7.78-7.78-2.64-2.64L1.67,11.69ZM14.13,4.51c.27-.28,.27-.72,0-1h0l-1.65-1.64c-.28-.27-.72-.27-1,0h0l-1.28,1.29,2.64,2.64,1.29-1.29Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should update panel title, case cancel 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left mg-panel__header-left--full">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
          <mg-input-text label-hide="" value="panel title">
            <mock:shadow-root>
              <div class="mg-input mg-input--has-buttons-group-append mg-input--is-input-group-append mg-input--text mg-input--width-full">
                <mg-input-title class="sr-only" identifier="identifier-edition-input">
                  Edit section title.
                </mg-input-title>
                <div class="mg-input__input-container">
                  <div class="mg-input__input">
                    <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 0;">
                      <input aria-describedby="identifier-edition-input-character-left" class="mg-input__box" id="identifier-edition-input" maxlength="400" name="identifier-edition-input" type="text" value="panel title">
                    </div>
                    <slot name="append-input"></slot>
                  </div>
                </div>
              </div>
            </mock:shadow-root>
            <mg-button is-icon="" slot="append-input">
              <!---->
              <button aria-disabled="false" aria-label="Cancel" class="mg-button mg-button--icon mg-button--secondary" id="identifier-edition-button-cancel">
                <div class="mg-button__content">
                  <mg-icon>
                    <mock:shadow-root>
                      <svg aria-hidden="true" class="mg-icon mg-icon--cross mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                        <path d="M14.26 12.74 9.52 8l4.7-4.7a.29.29 0 0 0 0-.41l-1.1-1.1a.29.29 0 0 0-.41 0L8 6.48 3.26 1.74a.24.24 0 0 0-.34 0L1.74 2.91a.24.24 0 0 0 0 .34L6.48 8l-4.7 4.7a.29.29 0 0 0 0 .41l1.1 1.1a.29.29 0 0 0 .41 0L8 9.52l4.74 4.74a.24.24 0 0 0 .34 0l1.17-1.17a.24.24 0 0 0 0-.34Z" fill="currentColor"></path>
                      </svg>
                    </mock:shadow-root>
                  </mg-icon>
                </div>
              </button>
            </mg-button>
            <mg-button is-icon="" slot="append-input">
              <!---->
              <button aria-disabled="false" aria-label="Confirm" class="mg-button mg-button--icon mg-button--secondary" id="identifier-edition-button-validate">
                <div class="mg-button__content">
                  <mg-icon>
                    <mock:shadow-root>
                      <svg aria-hidden="true" class="mg-icon mg-icon--check mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                        <path d="m15.27 4.23-1.11-1.18c-.11-.1-.27-.1-.38 0L6 10.36l-3.76-4a.187.187 0 0 0-.26 0L.71 7.6c-.07.07-.07.19 0 .26l5.12 5.41c.07.07.18.07.25 0l1.3-1.23 7.87-7.45c.1-.1.11-.26.01-.37h.01Z" fill="currentColor"></path>
                      </svg>
                    </mock:shadow-root>
                  </mg-icon>
                </div>
              </button>
            </mg-button>
          </mg-input-text>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should update panel title, case cancel 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
          <mg-button is-icon="">
            <!---->
            <button aria-disabled="false" aria-label="Edit section title." class="mg-button mg-button--flat mg-button--icon" id="identifier-edit-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--pen mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M1.67,11.69v2.64h2.64l7.78-7.78-2.64-2.64L1.67,11.69ZM14.13,4.51c.27-.28,.27-.72,0-1h0l-1.65-1.64c-.28-.27-.72-.27-1,0h0l-1.28,1.29,2.64,2.64,1.29-1.29Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should update panel title, case validate 1`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                panel title
              </div>
            </button>
          </mg-button>
          <mg-button is-icon="">
            <!---->
            <button aria-disabled="false" aria-label="Edit section title." class="mg-button mg-button--flat mg-button--icon" id="identifier-edit-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--pen mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M1.67,11.69v2.64h2.64l7.78-7.78-2.64-2.64L1.67,11.69ZM14.13,4.51c.27-.28,.27-.72,0-1h0l-1.65-1.64c-.28-.27-.72-.27-1,0h0l-1.28,1.29,2.64,2.64,1.29-1.29Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should update panel title, case validate 2`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left mg-panel__header-left--full">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
          <mg-input-text label-hide="" value="panel title">
            <mock:shadow-root>
              <div class="mg-input mg-input--has-buttons-group-append mg-input--is-input-group-append mg-input--text mg-input--width-full">
                <mg-input-title class="sr-only" identifier="identifier-edition-input">
                  Edit section title.
                </mg-input-title>
                <div class="mg-input__input-container">
                  <div class="mg-input__input">
                    <div class="mg-input__with-character-left" style="--mg-character-left-message-length: 0;">
                      <input aria-describedby="identifier-edition-input-character-left" class="mg-input__box" id="identifier-edition-input" maxlength="400" name="identifier-edition-input" type="text" value="panel title">
                    </div>
                    <slot name="append-input"></slot>
                  </div>
                </div>
              </div>
            </mock:shadow-root>
            <mg-button is-icon="" slot="append-input">
              <!---->
              <button aria-disabled="false" aria-label="Cancel" class="mg-button mg-button--icon mg-button--secondary" id="identifier-edition-button-cancel">
                <div class="mg-button__content">
                  <mg-icon>
                    <mock:shadow-root>
                      <svg aria-hidden="true" class="mg-icon mg-icon--cross mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                        <path d="M14.26 12.74 9.52 8l4.7-4.7a.29.29 0 0 0 0-.41l-1.1-1.1a.29.29 0 0 0-.41 0L8 6.48 3.26 1.74a.24.24 0 0 0-.34 0L1.74 2.91a.24.24 0 0 0 0 .34L6.48 8l-4.7 4.7a.29.29 0 0 0 0 .41l1.1 1.1a.29.29 0 0 0 .41 0L8 9.52l4.74 4.74a.24.24 0 0 0 .34 0l1.17-1.17a.24.24 0 0 0 0-.34Z" fill="currentColor"></path>
                      </svg>
                    </mock:shadow-root>
                  </mg-icon>
                </div>
              </button>
            </mg-button>
            <mg-button is-icon="" slot="append-input">
              <!---->
              <button aria-disabled="false" aria-label="Confirm" class="mg-button mg-button--icon mg-button--secondary" id="identifier-edition-button-validate">
                <div class="mg-button__content">
                  <mg-icon>
                    <mock:shadow-root>
                      <svg aria-hidden="true" class="mg-icon mg-icon--check mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                        <path d="m15.27 4.23-1.11-1.18c-.11-.1-.27-.1-.38 0L6 10.36l-3.76-4a.187.187 0 0 0-.26 0L.71 7.6c-.07.07-.07.19 0 .26l5.12 5.41c.07.07.18.07.25 0l1.3-1.23 7.87-7.45c.1-.1.11-.26.01-.37h.01Z" fill="currentColor"></path>
                      </svg>
                    </mock:shadow-root>
                  </mg-icon>
                </div>
              </button>
            </mg-button>
          </mg-input-text>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;

exports[`mg-panel navigation should update panel title, case validate 3`] = `
<mg-panel>
  <mock:shadow-root>
    <section class="mg-panel" id="identifier">
      <header class="mg-panel__header" id="identifier-header">
        <div class="mg-panel__header-left">
          <mg-button>
            <!---->
            <button aria-controls="identifier-content" aria-disabled="false" class="mg-button mg-button--flat" id="identifier-collapse-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--chevron-down mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M7.43,12.21.9,5.69a.81.81,0,0,1,0-1.14h0l.76-.77a.81.81,0,0,1,1.14,0L8,9l5.2-5.18a.81.81,0,0,1,1.14,0l.76.77a.8.8,0,0,1,0,1.13h0L8.57,12.21a.79.79,0,0,1-1.13,0Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
                Updated panel title
              </div>
            </button>
          </mg-button>
          <mg-button is-icon="">
            <!---->
            <button aria-disabled="false" aria-label="Edit section title." class="mg-button mg-button--flat mg-button--icon" id="identifier-edit-button">
              <div class="mg-button__content">
                <mg-icon>
                  <mock:shadow-root>
                    <svg aria-hidden="true" class="mg-icon mg-icon--pen mg-icon--size-regular" focusable="false" viewBox="0 0 16 16">
                      <path d="M1.67,11.69v2.64h2.64l7.78-7.78-2.64-2.64L1.67,11.69ZM14.13,4.51c.27-.28,.27-.72,0-1h0l-1.65-1.64c-.28-.27-.72-.27-1,0h0l-1.28,1.29,2.64,2.64,1.29-1.29Z" fill="currentColor"></path>
                    </svg>
                  </mock:shadow-root>
                </mg-icon>
              </div>
            </button>
          </mg-button>
        </div>
        <div class="mg-panel__header-right">
          <slot name="header-right"></slot>
        </div>
      </header>
      <article aria-labelledby="identifier-header" class="mg-panel__content" hidden="" id="identifier-content">
        <slot></slot>
      </article>
    </section>
  </mock:shadow-root>
</mg-panel>
`;
